# MultiQC_CMGG

./: .dockerignore  .gitignore  Dockerfile  README.md  USAGE.md  pyproject.toml  setup.py
.github/workflows/: build-docker.yaml  linux.yaml
docs/configs/: multiqc_config_MSH2.yaml  multiqc_config_additional_options.yaml  multiqc_config_coverage.yaml  multiqc_config_defaults.yaml  multiqc_config_msisensorpro.yaml
multiqc_cmgg/: cli.py  config_defaults.yaml  custom_code.py  multiqc_cmgg.py  multiqc_config.yaml  multiqc_config_MSH2.yaml  multiqc_config_coverage.yaml  multiqc_config_msisensorpro.yaml  search_patterns.yaml
multiqc_cmgg/modules/MSH2_hotspot_varcount/: MSH2_hotspot_varcount.py  __init__.py
multiqc_cmgg/modules/MSH2_varcount/: MSH2_varcount.py  __init__.py
multiqc_cmgg/modules/coverage/: __init__.py  coverage.py
multiqc_cmgg/modules/demultiplex/: demultiplex.py
multiqc_cmgg/modules/msi_sensor_pro/: __init__.py  msi_sensor_pro.py
multiqc_cmgg/modules/ngsbits/: __init__.py  ngsbits.py  sample_gender.py  utils.py
multiqc_cmgg/modules/picard_demultiplex/: CollectIlluminaBasecallingMetrics.py  CollectIlluminaLaneMetrics.py  ExtractIlluminaBarcodes.py  MarkIlluminaAdapters.py  demultiplex.py
multiqc_cmgg/modules/sample_gender/: __init__.py  sample_gender.py
multiqc_cmgg/modules/sampletracking/: sampletracking.py
multiqc_cmgg/templates/cmgg/: __init__.py  base.html  footer.html  header.html
test_data/MSH2_hotspot_varcount/: spoofsanger.counts.txt  test1.counts.txt  test2.counts.txt
test_data/coverage/Sample1/: Sample1.mosdepth.region.dist.txt  Sample1_Panel_1_per_exon.mosdepth.region.dist.txt  Sample1_Panel_2_per_exon.mosdepth.region.dist.txt  Sample1_Panel_3_per_exon.mosdepth.region.dist.txt  Sample1_Panel_4.mosdepth.region.dist.txt
test_data/coverage/Sample2/: Sample2.mosdepth.region.dist.txt  Sample2_Panel_1_per_exon.mosdepth.region.dist.txt  Sample2_Panel_2_per_exon.mosdepth.region.dist.txt  Sample2_Panel_3_per_exon.mosdepth.region.dist.txt  Sample2_Panel_4_per_exon.mosdepth.region.dist.txt
test_data/coverage/Sample3/: Sample3.mosdepth.region.dist.txt  Sample3_Panel_1_per_exon.mosdepth.region.dist.txt  Sample3_Panel_2_per_exon.mosdepth.region.dist.txt  Sample3_Panel_3_per_exon.mosdepth.region.dist.txt  Sample3_Panel_4_per_exon.mosdepth.region.dist.txt
test_data/mosdepth/: HG100.mosdepth.global.dist.txt  HG100.mosdepth.summary.txt  HG96.mosdepth.global.dist.txt  HG96.mosdepth.summary.txt  HG97.mosdepth.global.dist.txt  HG97.mosdepth.summary.txt  HG99.mosdepth.global.dist.txt  HG99.mosdepth.summary.txt  multiqc_config.yaml
test_data/msi_sensor_pro/: D2509933-ready_all_msi  D2509933-ready_summary_msi  D2510028-ready_all  D2510028-ready_summary
test_data/ngsbits/: Person1_hetx.tsv  Person1_sry.tsv  Person1_xy.tsv  multiqc_config.yaml  test1_hetx.tsv  test1_sry.tsv  test1_xy.tsv  test2_hetx.tsv  test2_sry.tsv  test2_xy.tsv  test3_hetx.tsv  test3_sry.tsv  test3_xy.tsv  test_xy.tsv
