[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "multiqc_cmgg"
version = "0.0.2"
dependencies = [
    "pandas",
    "ruff>=0.8.3",
    "multiqc>=1.10"
]
authors = [
    {name = "Thomas Stevens", email = "thomas.stevens@student.howest.be"},
    {name = "Matthias De Smet" , email= "11850640+matthdsm@users.noreply.github.com"}
]
description = "MultiQC plugin for interal use at CMGG"
readme = "README.md"
license = "MIT"
keywords = ["bioinformatics", "biology", "sequencing", "NGS", "next generation sequencing", "quality control"]

[project.entry-points."multiqc.modules.v1"]
#ngs = "multiqc.modules.ngsbits:function"
#coverage = "multiqc.modules.coverage:function2"

[project.entry-points."multiqc.templates.v1"]
cmgg = "multiqc_cmgg.templates.cmgg"
default="multiqc.templates.default"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.setuptools.packages.find]
where = ["."]
include = ["multiqc_cmgg*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"multiqc_cmgg" = ["templates/**/*"]